--- a/examples/index.html
+++ b/examples/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic Example</title>
+    <title>Examples</title>
   </head>
   <body>
-    <script src="./index.ts" type="module"></script>
+    <nav>
+      <a href="./basic/index.html">Basic</a>
+    </nav>
   </body>
 </html>
