--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>💎</text></svg>"
+    />
+
     <title>Lattice Examples</title>
 
     <style>
@@ -11,11 +16,11 @@
         font-family: sans-serif;
       }
 
-      body h1 {
+      h1 {
         text-align: center;
       }
 
-      .top-link {
+      .gh-link {
         position: absolute;
         top: 2rem;
         right: 2rem;
@@ -24,7 +29,7 @@
         font-weight: bold;
       }
 
-      .top-link:hover {
+      .gh-link:hover {
         color: #777;
       }
 
@@ -56,7 +61,10 @@
   <body>
     <h1>💎 Lattice Examples</h1>
 
-    <a class="top-link" href="https://github.com/lattice-engine/lattice"
+    <a
+      class="gh-link"
+      href="https://github.com/lattice-engine/lattice"
+      target="_blank"
       >GitHub</a
     >
 
