setup gltf and render packages

--- a/examples/index.html
+++ b/examples/index.html
@@ -70,6 +70,7 @@
 
     <main>
       <a href="./basic/index.html">Basic</a>
+      <a href="./gltf/index.html">glTF</a>
     </main>
   </body>
 </html>
