--- a/examples/index.html
+++ b/examples/index.html
@@ -13,7 +13,8 @@
 
     <style>
       body {
-        font-family: sans-serif;
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+          "Lucida Sans", Arial, sans-serif;
       }
 
       h1 {
@@ -35,13 +36,13 @@
 
       main {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         gap: 1rem;
         padding: 1rem;
       }
 
       main a {
-        padding: 2rem;
+        padding: 3rem;
         font-size: large;
         border: 1px solid #333;
         border-radius: 0.5rem;
@@ -71,6 +72,7 @@
     <main>
       <a href="./basic/index.html">Basic</a>
       <a href="./gltf/index.html">glTF</a>
+      <a href="./physics/index.html">Physics</a>
     </main>
   </body>
 </html>
