--- a/examples/gltf/index.html
+++ b/examples/gltf/index.html
@@ -9,7 +9,7 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>💎</text></svg>"
     />
 
-    <title>Basic Example</title>
+    <title>glTF Example</title>
 
     <style>
       body {
