--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>💎</text></svg>"
     />
-    <link rel="preload" as="image" href="/src/about/Phos.png" />
+    <link rel="preload" as="image" href="/src/components/about/Phos.png" />
     <title>Lattice Examples</title>
   </head>
   <body>
