remove draco scripts from gltf package

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,5 +13,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
+    <script defer src="/scripts/draco_wasm_wrapper_gltf.js"></script>
+    <script defer src="/scripts/draco_encoder_wrapper.js"></script>
   </body>
 </html>
